--- a/client/src/components/Overview/InnerImageStyles.css
+++ b/client/src/components/Overview/InnerImageStyles.css
@@ -6,7 +6,7 @@
   display: inline-block;
   cursor: -webkit-zoom-in;
   cursor: crosshair;
-  background: black;
+  background: #F7F7F7;
 }
 
 .iiz--drag .iiz__zoom-img--visible {
