--- a/client/src/components/Overview/MainImage.css
+++ b/client/src/components/Overview/MainImage.css
@@ -22,7 +22,7 @@
   z-index: 2000;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #F7F7F7;
   transform: scale(1);
   transform-origin: top center;
   display: flex;
@@ -50,7 +50,7 @@
 }
 
 ._3q7r8 {
-  background-color: #000;
+  background-color: #F7F7F7;
 }
 
 [data-is-not-keyboard-user='true'] *:focus {
@@ -381,10 +381,10 @@
 }
 
 ._3WRGR {
-  stroke: #bbb;
+  stroke: #3FD2C7;
   stroke-opacity: 1;
   stroke-width: 1px;
-  fill: #fff;
+  fill: #3FD2C7;
 }
 
 ._1JHpX {
