--- a/client/src/components/Overview/alice-carousel.css
+++ b/client/src/components/Overview/alice-carousel.css
@@ -51,6 +51,7 @@
   .alice-carousel__stage-item {
     position: relative;
     display: inline-block;
+    text-align: center;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
